; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/mmgr/extr_dsa.c_dsa_attach_in_place.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/mmgr/extr_dsa.c_dsa_attach_in_place.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DSM_HANDLE_INVALID = common dso_local global i32 0, align 4
@dsa_on_dsm_detach_release_in_place = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @dsa_attach_in_place(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* @DSM_HANDLE_INVALID, align 4
  %8 = call i32* @attach_internal(i8* %6, i32* null, i32 %7)
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %16

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = load i8*, i8** %3, align 8
  %14 = call i32 @PointerGetDatum(i8* %13)
  %15 = call i32 @on_dsm_detach(i32* %12, i32* @dsa_on_dsm_detach_release_in_place, i32 %14)
  br label %16

16:                                               ; preds = %11, %2
  %17 = load i32*, i32** %5, align 8
  ret i32* %17
}

declare dso_local i32* @attach_internal(i8*, i32*, i32) #1

declare dso_local i32 @on_dsm_detach(i32*, i32*, i32) #1

declare dso_local i32 @PointerGetDatum(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
